@@ -6,3 +6,4 @@
 * Add syntax highlighting for Scaladoc - :ticket:`1001172`
 * Disable Java quick fixes/assists in Scala sources :ticket:`1001434`
 * Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
+* Correct partitioning of octal sequences in character literals - :ticket:`1001443`
